Refactor CSS variables and HTML structure

--- a/www/index.html
+++ b/www/index.html
@@ -9,69 +9,176 @@
 :root {
     --bg-color: #f5f5f5;
     --text-color: #333;
-    --header-bg: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    --header-bg: linear-gradient(135deg, #667eea, #764ba2);
+    --tab-bg: #fff;
     --tab-active-bg: #667eea;
     --tab-active-color: #fff;
     --table-bg: #fff;
     --table-row-even: #f8f9fa;
+    --border-color: #eee;
+    --fab-bg: linear-gradient(135deg, #667eea, #764ba2);
+    --modal-bg: #fff;
 }
+
 body.dark {
     --bg-color: #1e1e2f;
-    --text-color: #ddd;
-    --header-bg: linear-gradient(135deg, #333399 0%, #551a8b 100%);
+    --text-color: #eee;
+    --header-bg: linear-gradient(135deg, #333399, #551a8b);
+    --tab-bg: #2c2c3c;
     --tab-active-bg: #4444aa;
     --tab-active-color: #fff;
     --table-bg: #2c2c3c;
     --table-row-even: #3a3a4c;
+    --border-color: #555;
+    --fab-bg: #4444aa;
+    --modal-bg: #2c2c3c;
 }
-* { margin:0; padding:0; box-sizing:border-box; }
+
+/* Reset & Base */
+* {margin:0; padding:0; box-sizing:border-box;}
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', sans-serif;
     background: var(--bg-color);
     color: var(--text-color);
+    transition: background 0.3s, color 0.3s;
 }
-.container { padding:20px; max-width:100%; }
+.container {padding:20px; max-width:100%;}
+
+/* Header */
 .header {
-    text-align:center; margin-bottom:30px; padding:20px;
+    text-align:center;
+    margin-bottom:20px;
+    padding:20px;
     background: var(--header-bg);
-    color:white; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1);
+    color:white;
+    border-radius:15px;
+    box-shadow:0 4px 15px rgba(0,0,0,0.1);
 }
-.header h1 { font-size:1.5em; margin-bottom:10px; }
-.tabs { display:flex; background:white; border-radius:10px; margin-bottom:20px; box-shadow:0 2px 10px rgba(0,0,0,0.1);}
+.header h1 {font-size:1.5em; margin-bottom:5px;}
+.header p {font-size:0.95em; margin-bottom:0;}
+.header button {
+    background: rgba(255,255,255,0.2);
+    border:1px solid rgba(255,255,255,0.3);
+    color:white;
+    padding:8px 15px;
+    border-radius:20px;
+    cursor:pointer;
+    margin-top:10px;
+}
+
+/* Tabs */
+.tabs {
+    display:flex;
+    background: var(--tab-bg);
+    border-radius:10px;
+    margin-bottom:20px;
+    box-shadow:0 2px 10px rgba(0,0,0,0.1);
+}
 .tab {
-    flex:1; padding:15px; text-align:center; cursor:pointer; transition:all 0.3s ease; border-radius:10px;
+    flex:1;
+    padding:15px;
+    text-align:center;
+    cursor:pointer;
+    transition: all 0.3s ease;
+    border-radius:10px;
 }
-.tab.active { background: var(--tab-active-bg); color: var(--tab-active-color);}
-.tab-content { display:none; }
-.tab-content.active { display:block; }
-.data-table { background: var(--table-bg); border-radius:10px; overflow:hidden; box-shadow:0 2px 10px rgba(0,0,0,0.1); margin-bottom:80px; }
-.table-header { padding:15px; font-weight:bold; border-bottom:1px solid #eee; }
-.table-row { display:flex; padding:12px 15px; border-bottom:1px solid #eee; align-items:center; }
-.table-row:nth-child(even){ background: var(--table-row-even);}
-.col-no { width:10%; }
-.col-nama { width:30%; }
-.col-tanggal { width:30%; }
-.col-keterangan { width:30%; }
+.tab.active {
+    background: var(--tab-active-bg);
+    color: var(--tab-active-color);
+}
+
+/* Tab Content */
+.tab-content {display:none;}
+.tab-content.active {display:block;}
+
+/* Table */
+.data-table {
+    background: var(--table-bg);
+    border-radius:10px;
+    overflow:hidden;
+    box-shadow:0 2px 10px rgba(0,0,0,0.1);
+    margin-bottom:20px;
+}
+.table-header, .table-row {
+    display:flex;
+    padding:10px 15px;
+    align-items:center;
+    border-bottom:1px solid var(--border-color);
+}
+.table-header {
+    font-weight:bold;
+    background: var(--table-row-even);
+}
+.table-row:nth-child(even) {background: var(--table-row-even);}
+.col-no {width:10%;}
+.col-nama {width:30%;}
+.col-tanggal {width:30%;}
+.col-keterangan {width:30%;}
+
+/* FAB */
 .fab-button {
-    position:fixed; bottom:30px; right:30px; width:60px; height:60px;
-    background: var(--tab-active-bg); border-radius:50%; display:flex; align-items:center; justify-content:center;
-    color:white; font-size:24px; box-shadow:0 4px 20px rgba(0,0,0,0.2); cursor:pointer; z-index:1000; transition:transform 0.3s ease;
+    position:fixed;
+    bottom:30px;
+    right:30px;
+    width:60px;
+    height:60px;
+    background: var(--fab-bg);
+    border-radius:50%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:white;
+    font-size:28px;
+    box-shadow:0 4px 20px rgba(0,0,0,0.2);
+    cursor:pointer;
+    z-index:1000;
+    transition: transform 0.3s, background 0.3s;
 }
-.fab-button:hover { transform:scale(1.1);}
-.modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:2000; align-items:center; justify-content:center;}
-.modal-content { background: var(--table-bg); border-radius:15px; width:90%; max-width:500px; max-height:80vh; overflow-y:auto; }
-.modal-header { padding:20px; border-bottom:1px solid #eee; background: var(--header-bg); color:white; border-radius:15px 15px 0 0;}
-.modal-body { padding:20px; }
-.form-group { margin-bottom:20px; }
-.form-group label { display:block; margin-bottom:5px; font-weight:500; }
-.form-control { width:100%; padding:12px; border:1px solid #ddd; border-radius:8px; font-size:14px; }
-.btn-group { display:flex; gap:10px; margin-top:20px; }
-.btn { flex:1; padding:12px; border:none; border-radius:8px; cursor:pointer; font-weight:500;}
-.btn-primary { background:#667eea; color:white;}
-.btn-secondary { background:#6c757d; color:white;}
-.btn-success { background:#28a745; color:white;}
-.empty-state { text-align:center; padding:40px 20px; color:#6c757d;}
-.action-buttons { display:flex; gap:10px; margin-top:20px;}
+.fab-button:hover {transform:scale(1.1);}
+
+/* Modal */
+.modal {
+    display:none;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.5);
+    z-index:2000;
+    align-items:center;
+    justify-content:center;
+}
+.modal-content {
+    background: var(--modal-bg);
+    color: var(--text-color);
+    border-radius:15px;
+    width:90%;
+    max-width:500px;
+    max-height:80vh;
+    overflow-y:auto;
+    transition: background 0.3s, color 0.3s;
+}
+.modal-header {
+    padding:20px;
+    border-bottom:1px solid var(--border-color);
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+}
+.modal-body {padding:20px;}
+.close-btn {cursor:pointer; font-size:20px;}
+
+/* Forms & Buttons */
+.form-group{margin-bottom:15px;}
+.form-group label{display:block; margin-bottom:5px; font-weight:500;}
+.form-control{width:100%; padding:10px; border:1px solid #ddd; border-radius:8px; font-size:14px; background:var(--table-bg); color:var(--text-color); transition:background 0.3s, color 0.3s;}
+.btn-group{display:flex; gap:10px; margin-top:20px;}
+.btn{flex:1; padding:12px; border:none; border-radius:8px; cursor:pointer; font-weight:500;}
+.btn-primary{background:#667eea; color:white;}
+.btn-secondary{background:#6c757d; color:white;}
+.btn-success{background:#28a745; color:white;}
+.empty-state{text-align:center; padding:30px 0; color:#6c757d;}
 </style>
 </head>
 <body>
@@ -79,22 +186,21 @@ body {
     <div class="header">
         <h1>📊 Data Management</h1>
         <p>Kelola Data Masuk & Keluar</p>
+        <button onclick="toggleExportModal()">💾 Export</button>
+        <button onclick="toggleDarkMode()">🌙 Dark Mode</button>
     </div>
+
     <div class="tabs">
         <div class="tab active" onclick="switchTab('masuk')">📥 Data Masuk</div>
         <div class="tab" onclick="switchTab('keluar')">📤 Data Keluar</div>
     </div>
+
     <div id="masuk-tab" class="tab-content active">
-        <div class="data-table">
-            <div class="table-header">Data Masuk</div>
-            <div id="masuk-data"></div>
-        </div>
+        <div class="data-table" id="masuk-data"></div>
     </div>
+
     <div id="keluar-tab" class="tab-content">
-        <div class="data-table">
-            <div class="table-header">Data Keluar</div>
-            <div id="keluar-data"></div>
-        </div>
+        <div class="data-table" id="keluar-data"></div>
     </div>
 </div>
 
@@ -103,7 +209,10 @@ body {
 <!-- Modal Form -->
 <div id="formModal" class="modal">
     <div class="modal-content">
-        <div class="modal-header"><h2>➕ Tambah Data Baru</h2></div>
+        <div class="modal-header">
+            <h2>➕ Tambah Data Baru</h2>
+            <span class="close-btn" onclick="hideForm()">✖</span>
+        </div>
         <div class="modal-body">
             <form id="dataForm">
                 <div class="form-group">
@@ -134,12 +243,20 @@ body {
     </div>
 </div>
 
-<!-- Export Modal -->
+<!-- Modal Export -->
 <div id="exportModal" class="modal">
     <div class="modal-content">
-        <div class="modal-header"><h2>💾 Export Data</h2></div>
+        <div class="modal-header">
+            <h2>💾 Export Data</h2>
+            <span class="close-btn" onclick="hideExportModal()">✖</span>
+        </div>
         <div class="modal-body">
-            <div class="action-buttons">
+            <div class="form-group">
+                <label>Pilih Folder Simpan (Opsional)</label>
+                <input type="text" id="saveFolder" class="form-control" placeholder="contoh: Download/MyApp">
+                <small>Folder ini akan disimpan sebagai default untuk export berikutnya.</small>
+            </div>
+            <div class="btn-group">
                 <button class="btn btn-success" onclick="exportToCSV()">Export CSV</button>
                 <button class="btn btn-primary" onclick="exportToXLSX()">Export XLSX</button>
             </div>
@@ -149,4 +266,4 @@ body {
 
 <script src="js/index.js"></script>
 </body>
-        </html>
+    </html>
